--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,9 @@ input {
 #output {
     margin: 20px auto;
     min-height: 20px;
-    overflow:auto;
+    max-width: 70%;
+    max-height: calc(100% - 280px - 20px);
+    overflow:scroll;
 }
 
 #results {
@@ -71,8 +73,9 @@ input {
     padding:3px;
 }
 
-#results > tbody > tr:first-child > td, #results > tbody > tr > td:first-child {
+#results > tbody > tr:first-child > th, #results > tbody > tr > th:first-child, #results > tbody > tr > td:first-child{
     background-color:lightyellow;
+    font-weight: normal;
     border-style: solid;
     border-color: #DDDDDD;
     border-width: 1px 2px 2px 1px;
@@ -92,4 +95,13 @@ input {
 #results > tbody > tr:not(:first-child) > td:not(:first-child):hover {
     background-color:lightgreen;
     border-width: 2px 0px 0px 2px;
+}
+
+.header-top {
+    position:sticky;
+    top:0;
+}
+.header-side {
+    position:sticky;
+    left:0;
 }
