--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ input {
     min-height: 20px;
     max-width: 70%;
     max-height: calc(100% - 280px - 20px);
-    overflow:scroll;
+    overflow:auto;
 }
 
 #results {
