Added annotations to css and js

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@ body {
 .container {
     font-size: 120%;
 }
-
+/*
+ * Styling for the input to have cute border and coloring
+ * fixed width and margin are used to calculate size of table
+ * */
 fieldset {
     border-radius: 2px;
     border-color: black;
@@ -35,6 +38,9 @@ label {
     text-align: center;
 }
 
+/*
+ * give the inputs a nice round look with right align
+ * */
 input {
     text-align:right;
     float:right;
@@ -53,6 +59,11 @@ input {
     float:none;
 }
 
+/*
+ * box that holds the results table,
+ * max height uses calc to fill the rest of the page.
+ * overflow auto allows for scrolling
+ * */
 #output {
     margin: 20px auto;
     min-height: 20px;
@@ -73,7 +84,10 @@ input {
     padding:3px;
 }
 
-#results > tbody > tr:first-child > th, #results > tbody > tr > th:first-child, #results > tbody > tr > td:first-child{
+/*
+ * stlying for the headings
+ * */
+th, #results > tbody > tr > td:first-child{
     background-color:lightyellow;
     font-weight: normal;
     border-style: solid;
@@ -81,6 +95,9 @@ input {
     border-width: 1px 2px 2px 1px;
 }
 
+/*
+ * alternating coloring for the inner columns
+ * */
 #results > tbody > tr:not(:first-child) > td:not(:first-child):nth-child(2n+1) {
     background-color:lightcoral;
     border-style: solid;
@@ -92,11 +109,20 @@ input {
     border-width: 0px 2px 2px 0px;
 }
 
+/*
+ * hover over the inner contents to highlight
+ * with a nice color and styling
+ * */
 #results > tbody > tr:not(:first-child) > td:not(:first-child):hover {
     background-color:lightgreen;
     border-width: 2px 0px 0px 2px;
 }
 
+/*
+ * positioning for the table headers to
+ * be over the top. for some reason flipping
+ * the table upside down broke so dont do that
+ */
 .header-top {
     position:sticky;
     top:0;
